Подключил font-awesome

--- a/app/index.html
+++ b/app/index.html
@@ -92,6 +92,7 @@
 			<div class='content'>
 				<h1 class='h1 select'>«Сосновый бор»</h1>
 				<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
+				<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
 			</div>
 		</div>
 	</header>
