--- a/app/index.html
+++ b/app/index.html
@@ -45,129 +45,118 @@
 
 <body>
 
-<!-- top-bar -->
-<div class='top-bar'>
-	<div class='container-fluid flex'>
-		<a href='#' class='logo'>
-			<img class='logo__img' src='img/favicon/apple-touch-icon-114x114.png' alt='Сосновый бор'>
-		</a>
-		<ul class="sf-menu mnu">
-			<li><a href="#">Главная</a></li>
-			<li>
-				<a href="#camp">Лагерь</a>
-				<ul>
-					<li><a href="#">Расписание заездов</a></li>
-					<!-- <li><a href="#">Распорядок дня</a></li> -->
-					<li><a href="#">Выездные экскурсии</a></li>
-					<li><a href="#">Условия проживания</a></li>
-					<li><a href="#">Питание</a></li>
-					<!-- <li><a href="#">Медицинское обслуживание</a></li> -->
-					<!-- <li><a href="#">Безопасность</a></li> -->
-					<!-- <li><a href="#">Награды лагеря</a></li> -->
-					<li><a href="#">Цены</a></li>
-					<li><a href="#">Оформление ребёнка</a></li>
-					<li><a href="#">Что взять ребёнку с собой</a></li>
-					<!-- <li><a href="#">Посещение ребёнка</a></li> -->
-				</ul>
-			</li>
-			<li>
-				<a href="#hut">Бронирование домика</a>
-				<ul>
-					<li><a href="#">Что входит</a></li>
-					<li><a href="#">Цены</a></li>
-				</ul>
-			</li>
-			<li><a href="#map">Карта территории</a></li>
-			<li><a href="#contacts">Контакты</a></li>
-		</ul>
-	</div>
-</div>
-<!-- the end top-bar -->
-
-<!-- pjax -->
-<div class='pjax-container'>
-	<!-- header -->
-	<header id='header' class='header'>
-		<div class='container'>
-			<div class='content'>
-				<h1 class='h1 select'>«Сосновый бор»</h1>
-				<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
-				<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
-			</div>
+	<!-- top-bar -->
+	<div class='top-bar'>
+		<div class='container flex relative'>
+			<a href='#' class='logo'>
+				<img class='logo__img' src='img/favicon/apple-touch-icon-114x114.png' alt='Сосновый бор'>
+			</a>
+			<ul class="sf-menu mnu">
+				<li><a href="#">Главная</a></li>
+				<li>
+					<a href="#camp">Лагерь</a>
+					<div class="sf-mega">
+						<p>Далеко-далеко за словесными горами в стране.</p>
+					</div>
+				</li>
+				<li>
+					<a href="#hut">Бронирование домика</a>
+					<ul>
+						<li><a href="#">Что входит</a></li>
+						<li><a href="#">Цены</a></li>
+					</ul>
+				</li>
+				<li><a href="#map">Карта территории</a></li>
+				<li><a href="#contacts">Контакты</a></li>
+			</ul>
 		</div>
-	</header>
-	<!-- the end header -->
+	</div>
+	<!-- the end top-bar -->
 
-	<!-- calendar -->
+	<!-- pjax -->
+	<div class='pjax-container'>
+		<!-- header -->
+		<header id='header' class='header'>
+			<div class='container'>
+				<div class='content'>
+					<h1 class='h1 select'>«Сосновый бор»</h1>
+					<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
+					<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
+				</div>
+			</div>
+		</header>
+		<!-- the end header -->
+
+		<!-- calendar -->
 <!-- 	<section id='calendar' class='section calendar'>
 	<div class='container'>
 		<div id='calendar_basic'></div>
 	</div>
 </section> -->
-	<!-- the end calendar -->
+<!-- the end calendar -->
 
-	<!-- camp -->
-	<section id='camp' class='section camp'>
-		<div class='container'>
-			<div class='content'>
-				<h2 class='h2 select'>Детский лагерь</h2>
-				<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Бросил на берегу эта то все знаках до путь, предупреждал, продолжил диких вскоре. Подпоясал если, назад вопроса приставка то о строчка.</p>
-				<a href='#' class='btn'>Подробнее</a>
-			</div>
+<!-- camp -->
+<section id='camp' class='section camp'>
+	<div class='container'>
+		<div class='content'>
+			<h2 class='h2 select'>Детский лагерь</h2>
+			<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Бросил на берегу эта то все знаках до путь, предупреждал, продолжил диких вскоре. Подпоясал если, назад вопроса приставка то о строчка.</p>
+			<a href='#' class='btn'>Подробнее</a>
 		</div>
-	</section>
-	<!-- the end camp -->
-
-	<!-- hut -->
-	<section id='hut' class='section hut'>
-		<div class='container'>
-			<div class='content'>
-				<h2 class='h2 select'>Бронирование домика</h2>
-				<p class='p'>Проведите свои выходные или праздники с друзьями, на природе и с шашлыком. Далеко-далеко за словесными горами в стране.</p>
-				<a href='#' class='btn'>Подробнее</a>
-			</div>
-		</div>
-	</section>
-	<!-- the end hut -->
-
-	<!-- map -->
-	<section id='map' class='section map'>
-		<div class='container'>
-			<div class='content'>
-				<h2 class='h2 select'>Карта территории</h2>
-				<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которое что меня которой ты, снова пунктуация напоивший города реторический о безорфографичный свой агенство, проектах даль семантика, снова текст. Повстречался.</p>
-			</div>
-		</div>
-	</section>
-	<!-- the end map -->
-
-	<!-- contacts -->
-	<section id='contacts' class='section contacts'>
-		<!-- <iframe class='yandex-map' src='https://api-maps.yandex.ru/frame/v1/-/CVXo4003' frameborder='0'></iframe> -->
-		<script class='yandex-map' type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=sdXIhx3hnoYmmGERD9AqJ4y0HqVoWtLl&lang=ru_RU&sourceType=constructor&scroll=false&id=contacts"></script>
-		<!-- <iframe class='google-map' src='https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d5073.6518346254825!2d36.640184728049476!3d50.51880581793929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x4126425f9c4c7801%3A0x4a2eff08507c1b82!2z0JTQsNC70YzQvdGP0Y8g0KLQuNGF0LDRjyDRg9C7LiwgMtCxLCBCZWxnb3JvZCwgQmVsZ29yb2Rza2F5YSBvYmxhc3Qn!3m2!1d50.5188059!2d36.6445621!5e0!3m2!1sru!2sru!4v1467781430936' frameborder='0' allowfullscreen></iframe> -->
-		<div class='container'>
-			<div class='content'>
-				<h2 class='h2 select'>Контакты</h2>
-				<span class="toogle-contacts">Свернуть</span>
-				<p class='p'>308017 Белгородская обл. г.Белгород, ул.Дальняя тихая, Урочище Липки 2-б</p>
-				<ul>
-					<li><span class='select'>Телефон: +7(4722) 21 33 91</span></li>
-					<li><span>ИНН: 3123315535</span></li>
-					<li><span>КПП: 312301001</span></li>
-					<li><span>ОГРН: 1133123000031</span></li>
-					<li><span>Директор: Сердюкова Лидия Николаевна</span></li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	<!-- the end contacts -->
-
-
-	<div class='hidden'></div>
-
 	</div>
-	<!-- the end pjax -->
+</section>
+<!-- the end camp -->
+
+<!-- hut -->
+<section id='hut' class='section hut'>
+	<div class='container'>
+		<div class='content'>
+			<h2 class='h2 select'>Бронирование домика</h2>
+			<p class='p'>Проведите свои выходные или праздники с друзьями, на природе и с шашлыком. Далеко-далеко за словесными горами в стране.</p>
+			<a href='#' class='btn'>Подробнее</a>
+		</div>
+	</div>
+</section>
+<!-- the end hut -->
+
+<!-- map -->
+<section id='map' class='section map'>
+	<div class='container'>
+		<div class='content'>
+			<h2 class='h2 select'>Карта территории</h2>
+			<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Которое что меня которой ты, снова пунктуация напоивший города реторический о безорфографичный свой агенство, проектах даль семантика, снова текст. Повстречался.</p>
+		</div>
+	</div>
+</section>
+<!-- the end map -->
+
+<!-- contacts -->
+<section id='contacts' class='section contacts'>
+	<!-- <iframe class='yandex-map' src='https://api-maps.yandex.ru/frame/v1/-/CVXo4003' frameborder='0'></iframe> -->
+	<script class='yandex-map' type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=sdXIhx3hnoYmmGERD9AqJ4y0HqVoWtLl&lang=ru_RU&sourceType=constructor&scroll=false&id=contacts"></script>
+	<!-- <iframe class='google-map' src='https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d5073.6518346254825!2d36.640184728049476!3d50.51880581793929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x4126425f9c4c7801%3A0x4a2eff08507c1b82!2z0JTQsNC70YzQvdGP0Y8g0KLQuNGF0LDRjyDRg9C7LiwgMtCxLCBCZWxnb3JvZCwgQmVsZ29yb2Rza2F5YSBvYmxhc3Qn!3m2!1d50.5188059!2d36.6445621!5e0!3m2!1sru!2sru!4v1467781430936' frameborder='0' allowfullscreen></iframe> -->
+	<div class='container'>
+		<div class='content'>
+			<h2 class='h2 select'>Контакты</h2>
+			<span class="toogle-contacts">Свернуть</span>
+			<p class='p'>308017 Белгородская обл. г.Белгород, ул.Дальняя тихая, Урочище Липки 2-б</p>
+			<ul>
+				<li><span class='select'>Телефон: +7(4722) 21 33 91</span></li>
+				<li><span>ИНН: 3123315535</span></li>
+				<li><span>КПП: 312301001</span></li>
+				<li><span>ОГРН: 1133123000031</span></li>
+				<li><span>Директор: Сердюкова Лидия Николаевна</span></li>
+			</ul>
+		</div>
+	</div>
+</section>
+<!-- the end contacts -->
+
+
+<div class='hidden'></div>
+
+</div>
+<!-- the end pjax -->
 
 	<!--[if lt IE 9]>
 	<script src='libs/html5shiv/es5-shim.min.js'></script>
