Продолжается работа над мобильным меню

--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
 <body>
 
 	<!-- toggle-mnu -->
-	<a href="#" class="toggle-mnu"><span></span></a>
+	<a href="#mobile-menu" class="toggle-mnu"><span></span></a>
 	<!-- the end toggle-mnu -->
 
 	<!-- top-bar -->
