Практически закончено меню

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,52 @@
 				<li>
 					<a href="#camp">Лагерь</a>
 					<div class="sf-mega">
-						<p>Далеко-далеко за словесными горами в стране.</p>
+						<div class="row">
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-1"><span class="select">Фотографии</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-2"><span class="select">Видео</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-3"><span class="select">Расписание заездов</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-4"><span class="select">Распорядок дня</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-5"><span class="select">Выездные экскурсии</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-6"><span class="select">Условия проживания</span></a>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-2">
+								<a href="#" class="camp__section camp__section-7"><span class="select">Питание</span></a>
+							</div><!-- 
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-2"><span class="select">Медицинское обслуживание</span></a>
+							</div> -->
+							<!-- <div class="col-md-2">
+								<a href='#' class="camp__section camp__section-3"><span class="select">Безопасность</span></a>
+							</div> -->
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-9"><span class="select">Цены</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
+							</div>
+							<div class="col-md-2">
+								<a href='#' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
+							</div>
+						</div>
 					</div>
 				</li>
 				<li>
@@ -85,7 +130,6 @@
 				<div class='content'>
 					<h1 class='h1 select'>«Сосновый бор»</h1>
 					<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
-					<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
 				</div>
 			</div>
 		</header>
