--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-2">
-								<a href="#" class="camp__section camp__section-7"><span class="select">Питание</span></a>
+								<a href='#' class="camp__section camp__section-7"><span class="select">Питание</span></a>
 							</div><!-- 
 							<div class="col-md-2">
 								<a href='#' class="camp__section camp__section-2"><span class="select">Медицинское обслуживание</span></a>
@@ -130,6 +130,7 @@
 				<div class='content'>
 					<h1 class='h1 select'>«Сосновый бор»</h1>
 					<p class='p'>Муниципальное бюджетное учреждение детский оздоровительный лагерь «Сосновый бор» г.Белгорода</p>
+					<i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i>
 				</div>
 			</div>
 		</header>
