Каркас страницы детского лагеря и частичное заполнение

--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset='utf-8'>
 
-	<title>Заголовок</title>
+	<title>Детский Лагерь - «Сосновый бор»</title>
 	<meta name='description' content=''>
 
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -62,27 +62,27 @@
 					<div class="sf-mega">
 						<div class="row">
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-1"><span class="select">Фотографии</span></a>
+								<a href='#camp__photos' class="camp__section camp__section-1"><span class="select">Фотографии</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-2"><span class="select">Видео</span></a>
+								<a href='#camp__videos' class="camp__section camp__section-2"><span class="select">Видео</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-3"><span class="select">Расписание заездов</span></a>
+								<a href='#camp__schedule-of-races' class="camp__section camp__section-3"><span class="select">Расписание заездов</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-4"><span class="select">Распорядок дня</span></a>
+								<a href='#camp__theorder-of-the-day' class="camp__section camp__section-4"><span class="select">Распорядок дня</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-5"><span class="select">Выездные экскурсии</span></a>
+								<a href='#camp__field-trips' class="camp__section camp__section-5"><span class="select">Выездные экскурсии</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-6"><span class="select">Условия проживания</span></a>
+								<a href='#camp__living-conditions' class="camp__section camp__section-6"><span class="select">Условия проживания</span></a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-7"><span class="select">Питание</span></a>
+								<a href='#camp__food' class="camp__section camp__section-7"><span class="select">Питание</span></a>
 							</div><!-- 
 							<div class="col-md-2">
 								<a href='#' class="camp__section camp__section-2"><span class="select">Медицинское обслуживание</span></a>
@@ -91,32 +91,32 @@
 								<a href='#' class="camp__section camp__section-3"><span class="select">Безопасность</span></a>
 							</div> -->
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
+								<a href='#camp__awards' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-9"><span class="select">Цены</span></a>
+								<a href='#camp__prices' class="camp__section camp__section-9"><span class="select">Цены</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
+								<a href='#camp__registration' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
+								<a href='#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
+								<a href='#camp__visit' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
 							</div>
 						</div>
 					</div>
 				</li>
 				<li>
-					<a href="#hut">Бронирование домика</a>
+					<a href="/#hut">Бронирование домика</a>
 					<ul>
 						<li><a href="#">Что входит</a></li>
 						<li><a href="#">Цены</a></li>
 					</ul>
 				</li>
-				<li><a href="#map">Карта территории</a></li>
-				<li><a href="#contacts">Контакты</a></li>
+				<li><a href="/#map">Карта территории</a></li>
+				<li><a href="/#contacts">Контакты</a></li>
 			</ul>
 		</div>
 	</div>
@@ -124,7 +124,260 @@
 
 <!-- pjax -->
 <div class='pjax-container'>
+	<!-- header -->
+	<header class="header detskij-lager__header">
+		<div class="container">
+			<div class="content">
+				<h1 class="h1 select">Детский лагерь</h1>
+				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Выйти великий, что которой семантика знаках lorem всеми путь сих парадигматическая. Взобравшись щеке пояс большой своего всемогущая языком, знаках эта?</p>
+			</div>
+		</div>
+	</header>
+	<!-- the end header -->
 	
+	<!-- photos -->
+	<section id='camp__photos' class="section section__camp section__camp-1">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Фотографии</h2>
+				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p> -->
+			</div>
+		</div>
+	</section>
+	<!-- the end photos -->
+	
+	<!-- videos -->
+	<section id='camp__videos' class="section section__camp section__camp-2">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Видео</h2>
+				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p> -->
+			</div>
+		</div>
+	</section>
+	<!-- the end videos -->
+	
+	<!-- schedule-of-races -->
+	<section id='camp__schedule-of-races' class="section section__camp section__camp-3">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Расписание заездов</h2>
+				<table class="table">
+					<tr class="tr">
+						<th class="th">№ заезда</th>
+						<th class="th">Дата начала</th>
+						<th class="th">Дата окончания</th>
+					</tr>
+					<tr class="tr">
+						<td class="td">I</td>
+						<td class="td">02.06.2016</td>
+						<td class="td">22.06.2016</td>
+					</tr>
+					<tr class="tr">
+						<td class="td">II</td>
+						<td class="td">25.06.2016</td>
+						<td class="td">15.07.2016</td>
+					</tr>
+					<tr class="tr">
+						<td class="td">III</td>
+						<td class="td">18.07.2016</td>
+						<td class="td">08.08.2016</td>
+					</tr>
+					<tr class="tr">
+						<td class="td">IV</td>
+						<td class="td">10.08.2016</td>
+						<td class="td">30.08.2016</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</section>
+	<!-- the end schedule-of-races -->
+	
+	<!-- theorder-of-the-day -->
+	<section id='camp__theorder-of-the-day' class="section section__camp section__camp-4">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Распорядок дня</h2>
+				<div class="table-wrap">
+					<table class="table">
+						<tr class="tr">
+							<th class="th">Время</th>
+							<th class="th">Описание</th>
+						</tr>
+						<tr class="tr">
+							<td class="td">08:30</td>
+							<td class="td">Подъём</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">08:30 - 08:55</td>
+							<td class="td">Зарядка</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">09:00 - 09:30</td>
+							<td class="td">Завтрак</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">09:30 - 10:30</td>
+							<td class="td">Трудовые атаки</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">10:30 - 13:00</td>
+							<td class="td">Общелагерные мероприятия, работа кружков, занятия по интересам</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">13:00 - 14:00</td>
+							<td class="td">Обед</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">14:00 - 16:00</td>
+							<td class="td">Послеобеденный, дневной отдых</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">16:00 - 16:30</td>
+							<td class="td">Полдник</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">16:30 - 18:30</td>
+							<td class="td">Занятия в спортивных секциях, разновозрастных группах и объединениях, участие в общелагерных мероприятиях</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">18:30 - 19:00</td>
+							<td class="td">Свободное время, игры по интересам, индивидуальные чтения</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">19:00 - 19:30</td>
+							<td class="td">Ужин</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">19:30 - 20:30</td>
+							<td class="td">Вечера, дискотека</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">20:15 - 20:30</td>
+							<td class="td">Вечерний ужин</td>
+						</tr>
+					</table>
+					<div class="select">Для детей 6 - 9 лет</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">20:30 - 21:00</td>
+							<td class="td">Подготовка ко сну</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">21:00</td>
+							<td class="td">Отбой</td>
+						</tr>
+					</table>
+					<div class="select">Для детей 10 - 16 лет</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">20:30 - 22:15</td>
+							<td class="td">Дискотека</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">22:15 - 22:30</td>
+							<td class="td">Подготовка ко сну</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">22:30</td>
+							<td class="td">Отбой</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- the end theorder-of-the-day -->
+	
+	<!-- field-trips -->
+	<section id='camp__field-trips' class="section section__camp section__camp-5">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Выездные экскурсии</h2>
+				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p> -->
+			</div>
+		</div>
+	</section>
+	<!-- the end field-trips -->
+	
+	<!-- living-conditions -->
+	<section id='camp__living-conditions' class="section section__camp section__camp-6">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Условия проживания</h2>
+				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Вопроса свой всемогущая, своего вопрос рыбными он оксмокс. Заглавных не великий строчка приставка предложения снова сбить своего, инициал встретил дорогу.</p>
+			</div>
+		</div>
+	</section>
+	<!-- the end living-conditions -->
+	
+	<!-- food -->
+	<section id='camp__food' class="section section__camp section__camp-7">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Питание</h2>
+				<p class="p">Питание, ежедневно составляет <span class="select">комбината школьного питания</span>. С таким питанием, ребёнок будет сытый и здоровый.</p>
+			</div>
+		</div>
+	</section>
+	<!-- the end food -->
+	
+	<!-- awards -->
+	<section id='camp__awards' class="section section__camp section__camp-8">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Награды лагеря</h2>
+				<!-- <p class="p">Питание, ежедневно составляет комбината школьного питания. С таким питанием, ребёнок будет сытый и здоровый.</p> -->
+			</div>
+		</div>
+	</section>
+	<!-- the end awards -->
+	
+	<!-- prices -->
+	<section id='camp__prices' class="section section__camp section__camp-9">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Цены</h2>
+				<p class="p">Цена путёвки составляет <span class="select">13 000 руб.</span></p>
+			</div>
+		</div>
+	</section>
+	<!-- the end prices -->
+	
+	<!-- registration -->
+	<section id='camp__registration' class="section section__camp section__camp-10">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Оформление ребёнка</h2>
+				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Снова запятых, последний продолжил домах послушавшись эта предупредила снова. Собрал несколько, до подзаголовок если сих языком своих. Проектах, свое, букв.</p>
+			</div>
+		</div>
+	</section>
+	<!-- the end registration -->
+	
+	<!-- to-take -->
+	<section id='camp__to-take' class="section section__camp section__camp-11">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Что взять ребёнку с собой</h2>
+				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Снова запятых, последний продолжил домах послушавшись эта предупредила снова. Собрал несколько, до подзаголовок если сих языком своих. Проектах, свое, букв.</p>
+			</div>
+		</div>
+	</section>
+	<!-- the end to-take -->
+	
+	<!-- visit -->
+	<section id='camp__visit' class="section section__camp section__camp-12">
+		<div class="container">
+			<div class="content">
+				<h2 class="h2 select">Посещение ребёнка</h2>
+				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Снова запятых, последний продолжил домах послушавшись эта предупредила снова. Собрал несколько, до подзаголовок если сих языком своих. Проектах, свое, букв.</p>
+			</div>
+		</div>
+	</section>
+	<!-- the end visit -->
+
 </div>
 <!-- the end pjax -->
 
