--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset='utf-8'>
 
-	<title>Заголовок</title>
+	<title>«Сосновый бор»</title>
 	<meta name='description' content=''>
 
 	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -62,48 +62,48 @@
 					<div class="sf-mega">
 						<div class="row">
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-1"><span class="select">Фотографии</span></a>
+								<a href='/detskij-lager#camp__photos' class="camp__section camp__section-1"><span class="select">Фотографии</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-2"><span class="select">Видео</span></a>
+								<a href='/detskij-lager#camp__videos' class="camp__section camp__section-2"><span class="select">Видео</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-3"><span class="select">Расписание заездов</span></a>
+								<a href='/detskij-lager#camp__schedule-of-races' class="camp__section camp__section-3"><span class="select">Расписание заездов</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-4"><span class="select">Распорядок дня</span></a>
+								<a href='/detskij-lager#camp__theorder-of-the-day' class="camp__section camp__section-4"><span class="select">Распорядок дня</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-5"><span class="select">Выездные экскурсии</span></a>
+								<a href='/detskij-lager#camp__field-trips' class="camp__section camp__section-5"><span class="select">Выездные экскурсии</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-6"><span class="select">Условия проживания</span></a>
+								<a href='/detskij-lager#camp__living-conditions' class="camp__section camp__section-6"><span class="select">Условия проживания</span></a>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-7"><span class="select">Питание</span></a>
+								<a href='/detskij-lager#camp__food' class="camp__section camp__section-7"><span class="select">Питание</span></a>
 							</div><!-- 
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-2"><span class="select">Медицинское обслуживание</span></a>
+								<a href='/detskij-lager#' class="camp__section camp__section-2"><span class="select">Медицинское обслуживание</span></a>
 							</div> -->
 							<!-- <div class="col-md-2">
-								<a href='#' class="camp__section camp__section-3"><span class="select">Безопасность</span></a>
+								<a href='/detskij-lager#' class="camp__section camp__section-3"><span class="select">Безопасность</span></a>
 							</div> -->
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
+								<a href='/detskij-lager#camp__awards' class="camp__section camp__section-8"><span class="select">Награды лагеря</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-9"><span class="select">Цены</span></a>
+								<a href='/detskij-lager#camp__prices' class="camp__section camp__section-9"><span class="select">Цены</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
+								<a href='/detskij-lager#camp__registration' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
+								<a href='/detskij-lager#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
+								<a href='/detskij-lager#camp__visit' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
 							</div>
 						</div>
 					</div>
@@ -125,7 +125,7 @@
 <!-- pjax -->
 <div class='pjax-container'>
 	<!-- header -->
-	<header id='header' class='header'>
+	<header id='header' class='header sosnovyj-bor__header'>
 		<div class='container'>
 			<div class='content'>
 				<h1 class='h1 select'>«Сосновый бор»</h1>
@@ -141,7 +141,7 @@
 			<div class='content'>
 				<h2 class='h2 select'>Детский лагерь</h2>
 				<p class='p'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Бросил на берегу эта то все знаках до путь, предупреждал, продолжил диких вскоре. Подпоясал если, назад вопроса приставка то о строчка.</p>
-				<a href='#' class='btn'>Подробнее</a>
+				<a href='/detskij-lager#' class='btn'>Подробнее</a>
 			</div>
 		</div>
 	</section>
