Добавлена стилизация таблиц

--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,6 @@
 		<link rel='stylesheet' href='css/main.min.css'>
 	</noscript>
 
-	<script type='text/javascript' src='https://www.gstatic.com/charts/loader.js'></script>
-
 </head>
 
 <body>
@@ -199,7 +197,7 @@
 <footer class="section footer">
 	<div class="container">
 		<p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Моей над скатился имеет своих знаках переписали проектах встретил по всей лучше текстами текст, рот, своих строчка рыбного за возвращайся взобравшись.</p>
-		<a class='landing2top' href="#">Разработано в <span class="landing2top__logo">Landing<span>2</span>Top.ru</span></a>
+		<a class='landing2top' href="http://landing2top.ru" target='_blank' rel='author'>Разработано в <span class="landing2top__logo">Landing<span>2</span>Top.ru</span></a>
 	</div>
 </footer>
 <!-- the end footer -->
