Разработан раздел - Что взять с собой, добавлен robots.txt убран последний margin-bottom в .content

--- a/app/detskij-lager/index.html
+++ b/app/detskij-lager/index.html
@@ -98,7 +98,7 @@
 								<a href='#camp__registration' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
+								<a href='#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять с собой</span></a>
 							</div>
 							<div class="col-md-2">
 								<a href='#camp__visit' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
@@ -127,7 +127,7 @@
 		<div class="container">
 			<div class="content">
 				<h1 class="h1 select">Детский лагерь</h1>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Выйти великий, что которой семантика знаках lorem всеми путь сих парадигматическая. Взобравшись щеке пояс большой своего всемогущая языком, знаках эта?</p>
+				<!-- <p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Выйти великий, что которой семантика знаках lorem всеми путь сих парадигматическая. Взобравшись щеке пояс большой своего всемогущая языком, знаках эта?</p> -->
 			</div>
 		</div>
 	</header>
@@ -315,7 +315,7 @@
 		<div class="container">
 			<div class="content">
 				<h2 class="h2 select">Питание</h2>
-				<p class="p">Питание, ежедневно составляет <span class="select">комбината школьного питания</span>. С таким питанием, ребёнок будет сытый и здоровый.</p>
+				<p class="p">Питание, ежедневно составляет <span class="select">комбинат школьного питания</span>. С таким питанием, ребёнок будет сытый и здоровый.</p>
 			</div>
 		</div>
 	</section>
@@ -358,8 +358,88 @@
 	<section id='camp__to-take' class="section section__camp section__camp-11">
 		<div class="container">
 			<div class="content">
-				<h2 class="h2 select">Что взять ребёнку с собой</h2>
-				<p class="p">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Снова запятых, последний продолжил домах послушавшись эта предупредила снова. Собрал несколько, до подзаголовок если сих языком своих. Проектах, свое, букв.</p>
+				<h2 class="h2 select">Что взять с собой</h2>
+				<div class="table-wrap">
+					<div class="select">Одежда и обувь</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Cпортивный костюм и закрытая спортивная обувь</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">кроссовки, туфли, босоножки-сандали с фиксированной пяткой, сланцы</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">бейсболка, косынка или солнцезащитная шляпа</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">5-6 пар носков или гольф</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">нательное белье</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">пижама, ночная сорочка</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">2-3 футболки</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">шорты (2-3 шт).</td>
+						</tr>
+					</table>
+					
+					<div class="select">Ценные вещи</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Золотые украшения. Дорогая техника. Рекомендуем не давать детям с собой дорогостоящих вещей, золотых украшений, дорогой техники. Утеря подобных вещей сильно расстраивает детей и может стать источником конфликтов в отряде.</td>
+						</tr>
+					</table>
+
+					<div class="select">Предметы личной гигиены</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Зубная щетка и паста</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Мыло туалетное в мыльнице</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Хозяйственное мыло</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Мочалка</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">шампунь</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Полотенце</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">Расческа</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">ножницы для ногтей</td>
+						</tr>
+					</table>
+
+					<div class="select">Для девочек</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">косметические принадлежности для ухода за кожей и телом</td>
+						</tr>
+						<tr class="tr">
+							<td class="td">гигиенические принадлежности</td>
+						</tr>
+					</table>
+
+					<div class="select">Сотовый телефон</div>
+					<table class="table">
+						<tr class="tr">
+							<td class="td">Не следует давать ребенку в лагерь дорогой телефон, дети часто теряют технику</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</section>
