--- a/app/index.html
+++ b/app/index.html
@@ -98,7 +98,7 @@
 								<a href='/detskij-lager#camp__registration' class="camp__section camp__section-10"><span class="select">Оформление ребёнка</span></a>
 							</div>
 							<div class="col-md-2">
-								<a href='/detskij-lager#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять ребёнку с собой</span></a>
+								<a href='/detskij-lager#camp__to-take' class="camp__section camp__section-11"><span class="select">Что взять с собой</span></a>
 							</div>
 							<div class="col-md-2">
 								<a href='/detskij-lager#camp__visit' class="camp__section camp__section-12"><span class="select">Посещение ребёнка</span></a>
